deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nginx-app
  template:
    metadata:
      labels:
        app: my-nginx-app
      annotations:
        redeploy-timestamp: "2024-11-01T21:21:03" 
    spec:
      containers:
      - name: my-nginx-app
        image: jakehazex21/my-nginx-app:latest  
        ports:
        - containerPort: 80
        - containerPort: 443
        imagePullPolicy: Always 
      imagePullSecrets:  # Secret to pull private images from DockerHub
      - name: my-dockerhub-secret
