ghost deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-app
  template:
    metadata:
      labels:
        app: ghost-app
    spec:
      containers:
      - name: ghost-app
        image: jakehazex21/ubuntu-ghost-1
        ports:
        - containerPort: 2368
      imagePullSecrets:
      - name: my-dockerhub-secret
