mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-db
  namespace: default
  annotations:
    argocd.argoproj.io/sync-options: Prune=false  # Prevent ArgoCD from pruning this deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost-db
  template:
    metadata:
      labels:
        app: ghost-db
    spec:
      containers:
      - name: ghost-db
        image: jakehazex21/ubuntu-db-1
        ports:
        - containerPort: 3306
      imagePullSecrets:
      - name: my-dockerhub-secret
