ghost service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-app-service
  namespace: ghost
spec:
  selector:
    app: ghost-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2368
  type: ClusterIP
