ghost-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-db-service
  namespace: ghost  # Add this line
spec:
  selector:
    app: ghost-db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
