service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site
spec:
  type: LoadBalancer
  selector:
    app: my-nginx-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
