ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - host: beatsinthe.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-app
            port:
              number: 80
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: ghost-app-service  # Name of your Ghost service
            port:
              number: 80  # Ghost runs on port 2368 by default
  - host: www.beatsinthe.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-app
            port:
              number: 80
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: ghost-app-service  # Same Ghost service
            port:
              number: 80
  tls:
  - hosts:
    - beatsinthe.cloud
    - www.beatsinthe.cloud
    secretName: cloudfi-tls-secret
